src/App.css
/* ... */
#start-button-wrapper {
  display: flex;
  height: 100%;
  width: 100px;
  align-items: center;
}

#start-button {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-left: 5%;
  margin-right: 5%;
  height: 80%;
  width: 90%;
  font-family: "MS Dos";
  letter-spacing: -1px;
  color: black;
  background-color: var(--windows-grey);
  font-size: 16px;
}

#start-button-logo-container {
  height: 80%;
  width: 80%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.start-button-focused {
  background-color: #babfc3;
  border-bottom: 1px solid var(--border-light);
  border-right: 1px solid var(--border-light);
  border-top: 2px solid var(--border-dark);
  border-left: 2px solid var(--border-dark);
}

.start-button-unfocused {
  border-top: 1px solid var(--border-light);
  border-left: 1px solid var(--border-light);
  border-bottom: 2px solid var(--border-dark);
  border-right: 2px solid var(--border-dark);
}

#start-button-icon-wrapper {
  height: 100%;
  width: 60%;
}

#start-button-icon {
  width: 100%;
  height: 100%;
  background-image: url(./image/icons/windows-logo.png);
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}

#start-menu-label-wrapper {
  height: 100%;
  width: 60%;
}

#start-button-label {
  margin-left: 2px;
  margin-right: 2px;
}

#start-menu-wrapper {
  display: flex;
  position: absolute;
  bottom: 40px;
  left: 5px;
  height: 400px;
  width: 260px;
  border-right: 2px solid var(--border-dark);
  border-bottom: 2px solid var(--border-dark);
  border-top: 2px solid var(--border-light);
}

#start-menu {
  font-family: "PX Sans";
  font-size: 80%;
  z-index: 100;
  display: flex;
  flex-direction: column;
  background-color: #c0c0c0;
  width: 100%;
  height: 100%;
}

#start-menu-panel-container {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  border-bottom: 2px solid var(--border-dark);
  border-left: 2px solid var(--border-light);
}

#start-menu-logo-wrapper {
  display: flex;
  flex-direction: column-reverse;
  width: 15%;
  height: 100%;
  background-color: #808080;
  align-items: center;
}

#start-menu-logo {
  margin-bottom: 20%;
  width: 80%;
  height: 100%;
  background-image: url("./image/start-menu-logo.svg");
  background-position: bottom;
  background-repeat: no-repeat;
  background-size: contain;
}

.start-menu-item-wrapper {
  width: 100%;
  height: 60px;
  color: black;
  display: flex;
}

.start-menu-item-wrapper:hover {
  color: white;
  background-color: var(--menubar-blue);
}

.start-menu-item {
  display: flex;
  align-items: center;
  flex-direction: row;
  height: 98%;
  width: 98%;
  margin: 1% 0 0 1%;
}

.start-menu-item-image {
  height: 80%;
  width: 80px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  image-rendering: crisp-edges;
}

.icon-wrapper {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100px;
  width: 70px;
  margin: 20px;
  align-items: center;
  user-select: none;
}

.icon-wrapper:hover {
  filter: brightness(90%);
}

.icon-wrapper:active {
  filter: brightness(120%);
}

.icon {
  height: 100%;
  width: 100%;
  background-repeat: no-repeat;
  background-size: contain;
  image-rendering: crisp-edges;
}

.icon-label {
  color: white;
}

.icon-focused {
  outline: darkgray dashed thin;
}

.icon-not-focused {
  outline: none;
}

#system-tray-wrapper {
  height: 100%;
  width: 70px;
  display: flex;
  margin-left: auto;
  align-items: center;
}

#system-tray {
  background-color: var(--windows-grey);
  border-top: 1px solid var(--border-dark);
  border-left: 1px solid var(--border-dark);
  border-bottom: 1px solid var(--border-light);
  border-right: 1px solid var(--border-light);
  height: 80%;
  width: 100%;
  margin-right: 5%;
}

#clock-wrapper {
  font-family: var(--px-sans);
  font-size: 70%;
  height: 100%;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  user-select: none;
}

.window-wrapper {
  top: 0;
  left: 0;
  position: absolute;
  flex-direction: column;
  padding: 4px;
  background-color: var(--windows-grey);
  border-right: 3px solid #112122;
  border-bottom: 3px solid #112122;
  border-left: 3px solid #eef0ea;
  border-top: 3px solid #eef0ea;
}

.window-open {
  display: flex;
}

.window-minimised {
  display: none;
}

.window {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
}

.window-title-bar-container {
  display: flex;
  flex-direction: row;
  flex-grow: 0;
  height: 30px;
  width: 100%;
}

.title-bar {
  display: flex;
  flex-direction: row;
  width: 100%;
}

.title-bar-focused {
  color: white;
  background-color: var(--menubar-blue);
}

.title-bar-unfocused {
  color: #bfb8bf;
  background-color: #7f787f;
}

.window-title-bar-draggable {
  display: flex;
  flex: 1 1 auto;
}

.title-bar-icon-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 30px;
  height: 30px;
}

.title-bar-icon {
  height: 80%;
  width: 80%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

.title-bar-label-wrapper {
  margin-left: 10px;
  height: 100%;
  display: flex;
  align-items: center;
  font-size: 140%;
}

.window-controls-container {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  height: 30px;
  align-items: center;
}

.window-control-wrapper {
  display: flex;
  height: 24px;
  width: 24px;
  margin: 0 4px 0 4px;
}

.window-control {
  width: 100%;
  background-color: var(--windows-grey);
  border-top: 1px solid var(--border-light);
  border-left: 1px solid var(--border-light);
  border-bottom: 2px solid var(--border-dark);
  border-right: 2px solid var(--border-dark);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}
/* ... */

